# adk-agent-samples

./: .env.example  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  windows-setup.md
basic-agent/: README.md  agent.py
multi-agent/: README.md  agent.py
multi-agent-loop/: README.md  agent.py
multi-agent-loop/sub_agents/critic_agent/: agent.py
multi-agent-loop/sub_agents/initial_writer_agent/: __init__.py  agent.py
multi-agent-loop/sub_agents/refiner_agent/: __init__.py  agent.py
multi-agent-parallel/: README.md  agent.py
multi-agent-parallel/sub_agents/aggregator_agent/: agent.py
multi-agent-parallel/sub_agents/finance_researcher/: __init__.py  agent.py
multi-agent-parallel/sub_agents/health_researcher/: __init__.py  agent.py
multi-agent-parallel/sub_agents/tech_researcher/: __init__.py  agent.py
multi-agent-sequential/: README.md  agent.py
multi-agent-sequential/sub_agents/editor_agent/: agent.py
multi-agent-sequential/sub_agents/outline_agent/: __init__.py  agent.py
multi-agent-sequential/sub_agents/writer_agent/: agent.py
multi-agent/sub_agents/research_agent/: agent.py
multi-agent/sub_agents/summarizer_agent/: __init__.py  agent.py
